lavc/dvbsub: Add the missing line separator to dvb_encode_rle8().

Fixes 256-colour dvb subtitle encoding.

Fixes ticket #6769.